2009-03-08  Oliver Hader  <oliver@typo3.org>

	* Follow-up to feature #10565: Condition PIDinRootline did not work anymore
	* Follow-up to feature #10565: Fixed formatting in t3lib_matchCondition

2009-03-07  Stanislas Rolland  <typo3@sjbr.ca>

	* Follow-up for feature #7970: fontstyle and fontsize should not use deprecated font tag

2009-03-07  Benjamin Mack  <benni@typo3.org>

	* Cleanup #10601: Move static dyntabmenu code in external file
	* Added feature #10565: Speedup & cleanup t3lib_matchCondition - make use of trimExplode

2009-03-07  Ingo Renner  <ingo@typo3.org>

	* Added unit tests for the caching framework cache manager (backported from FLOW3) (part of #10614)

2009-03-07  Steffen Kamper  <info@sk-typo3.de>

	* Fixed Bug: #2859: followUp - add BACK_PATH to listUrl in list module

2009-03-06  Jeff Segars  <jeff@webempoweredchurch.org>

	* Fixed bug #5822: Indexed Search section menu includes pages with "hide in menu" flag (thanks to Andy Grunwald)

2009-03-06  Francois Suter  <francois@typo3.org>

	* Added feature #5466: Page selector for the list module (thanks to Christian Kuhn and Dmitry Pikhno)

2009-03-06  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #10610: htmlArea RTE: Two errors in class.tx_rtehtmlarea_acronym.php (Thanks to Ursula Renziehausen).
	* Fixed bug #6947: RTEfullScreenWidth by default please !

2009-03-05  Benjamin Mack  <benni@typo3.org>

	* Fixed #10600: Cleaned up sysext usersetup module code (part 1) and the table method in template.php

2009-03-05  Ingo Renner  <ingo@typo3.org>

	* Added unit tests for the caching framework file backend (backported from FLOW3) (part of #10614)
	* Added unit tests for the caching framework memcached backend (backported from FLOW3) (part of #10614)
	* Added unit tests for the caching framework APC backend (backported from FLOW3) (part of #10614)
	* Added unit tests for the caching framework abstract frontend (backported from FLOW3) (part of #10614)